# cg-project

./: CMakeLists.txt  README.md  assignment_1.cpp  assignment_4.cpp  main.cpp  test.cpp
Engine/Include/: Engine.h  Time.h
GraphicsLayer/Include/: GraphicsLayer.h  MeshData.h  MeshRenderer.h  Projection.h  ShaderCompiler.h  Transform.h  Window.h
Inc/: Camera.h  Draw.h  GLXtras.h  IO.h  Letters.h  Mesh.h  Misc.h  Quaternion.h  STB_Image.h  Sprite.h  Text.h  VRXtras.h  VecMat.h  Wav.h  Widgets.h  glad.h  glfw3.h  window.h
Lib/: Camera.cpp  Draw.cpp  GLXtras.cpp  IO.cpp  Letters.cpp  Lights.cpp  Mesh.cpp  Quaternion.cpp  Sprite.cpp  Text.cpp  VRXtras.cpp  Wav.cpp  Widgets.cpp  glad.c  window.cpp
OGL/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshData.h  MeshRenderer.h  Scene.cpp  Scene.h  ShaderLib.h  Transform.h
Voxel/: Chunk.cpp  Chunk.h  ChunkLoader.cpp  ChunkLoader.h  World.cpp  World.h
math/: projection.h  random.h  transform.cpp  transform.h
mesh/: MeshData.h
noise/: PerlinNoise.cpp  PerlinNoise.h
open_gl/: camera.cpp  camera.h  input.cpp  input.h  light.h  mesh.cpp  mesh.h  mesh_renderer.cpp  mesh_renderer.h  renderer.h  scene.cpp  scene.h  shaderLib.h  voxel.h  window.cpp  window.h
shaders/: shadowMapFragShader.fs  shadowMapVertShader.vs  standardFragmentShader.fs  standardVertexShader.vs
texture_images/: atlas.h  generate.h  save_load.cpp  save_load.h  stb_image.h  texture_images_tests.cpp
